added user registration
